# aws-inventory-manager

./: .gitignore  AWS_DELETION_IMPLEMENTATION_GUIDE.md  AWS_DELETION_RESEARCH.md  CLAUDE.md  DELETION_QUICK_REFERENCE.md  DELETION_RESEARCH_INDEX.md  DELETION_RESEARCH_SUMMARY.md  README.md  ROADMAP.md  pyproject.toml
.claude/: README.md
.claude/commands/: boto3-docs.md  compare-snapshots.md  new-collector.md  release.md  snapshot-all-accounts.md
.claude/hooks/: aws-profile-validator.sh  coverage-guardian.sh  deployment-safety.sh  pre-commit-quality.sh
.github/workflows/: test.yml
.specify/memory/: constitution.md
src/: __init__.py,cover
src/aws/: __init__.py,cover  client.py,cover  credentials.py,cover  rate_limiter.py,cover
src/cli/: __init__.py,cover  config.py,cover  main.py  main.py,cover
src/cost/: __init__.py,cover  analyzer.py,cover  explorer.py,cover  reporter.py,cover
src/delta/: __init__.py,cover  calculator.py  calculator.py,cover  differ.py  differ.py,cover  formatters.py  formatters.py,cover  models.py  models.py,cover  reporter.py  reporter.py,cover
src/models/: __init__.py,cover  config_diff.py  config_diff.py,cover  cost_report.py,cover  deletion_operation.py  deletion_operation.py,cover  deletion_record.py  deletion_record.py,cover  delta_report.py  delta_report.py,cover  efs_resource.py  efs_resource.py,cover  elasticache_resource.py  elasticache_resource.py,cover  inventory.py,cover  protection_rule.py  protection_rule.py,cover  report.py,cover  resource.py  resource.py,cover  security_finding.py  security_finding.py,cover  snapshot.py  snapshot.py,cover
src/restore/: __init__.py  __init__.py,cover  audit.py  audit.py,cover  cleaner.py  cleaner.py,cover  deleter.py  deleter.py,cover  dependency.py  dependency.py,cover  safety.py  safety.py,cover
src/security/: cis_mapper.py  cis_mapper.py,cover  models.py  models.py,cover  reporter.py  reporter.py,cover  scanner.py  scanner.py,cover
src/security/checks/: base.py  base.py,cover  ec2_checks.py  ec2_checks.py,cover  elasticache_checks.py  elasticache_checks.py,cover  iam_checks.py  iam_checks.py,cover  rds_checks.py  rds_checks.py,cover  s3_checks.py  s3_checks.py,cover  secrets_checks.py  secrets_checks.py,cover  sg_checks.py  sg_checks.py,cover
src/snapshot/: __init__.py,cover  capturer.py  capturer.py,cover  filter.py,cover  inventory_storage.py,cover  report_formatter.py,cover  reporter.py,cover  storage.py,cover
src/utils/: __init__.py,cover  export.py,cover  hash.py,cover  logging.py,cover  pagination.py,cover  paths.py,cover  progress.py,cover
tests/fixtures/: snapshots.py
tests/integration/: test_drift_details_cli.py  test_efs_collection.py  test_elasticache_collection.py  test_restore_workflow.py  test_security_scan_cli.py
(+61 files in other folders)
