[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-inventory-manager"
version = "0.4.0"
description = "AWS Resource Inventory Management & Delta Tracking CLI tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Troy Larson", email = "troy@calvinware.com"}
]
keywords = ["aws", "cloud", "infrastructure", "snapshot", "audit", "cost-tracking", "inventory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
    "boto3>=1.28.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
    "invoke>=2.0.0",
]

[project.scripts]
awsinv = "src.cli:cli_main"

[project.urls]
Homepage = "https://github.com/troylar/aws-inventory-manager"
Documentation = "https://github.com/troylar/aws-inventory-manager#readme"
Repository = "https://github.com/troylar/aws-inventory-manager"
Issues = "https://github.com/troylar/aws-inventory-manager/issues"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["src.cli.main", "src.cli.config", "src.utils.progress"]
disallow_untyped_defs = false
warn_no_return = false

# Ignore union-attr errors in CLI which uses Optional[Config]
[[tool.mypy.overrides]]
module = "src.cli.main"
disable_error_code = ["union-attr"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = [
    "tests",
]
